1) /api/auth/reset-password /api/auth/reset-password-by-token 2) Update mail;
